--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.4.0",
+    "dotenv-cli": "^7.4.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
-    "winston": "^3.8.2",
-    "dotenv-cli": "^7.4.2"
+    "winston": "^3.8.2"
   },
   "author": "",
   "license": "ISC"
